<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/activity_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_panel_wroclove">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@+id/ll_horizontal"
            android:orientation="vertical"
            android:layout_marginTop="300dp"
            android:layout_marginLeft="18dp">

            <LinearLayout
                android:id="@+id/ll_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_weather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/ic_panel_weather"
                    android:textColor="@android:color/white"
                    android:textSize="50sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="pogoda"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_bus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_bus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/ic_panel_buses"
                    android:textColor="@android:color/white"
                    android:textSize="50sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="rozkład"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="60dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_places"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_places"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/ic_panel_places"
                    android:textColor="@android:color/white"
                    android:textSize="50sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="miejsca"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_tracks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_tracks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/ic_panel_routes"
                    android:textColor="@android:color/white"
                    android:textSize="50sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="trasy"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/ic_panel_map"
                    android:textColor="@android:color/white"
                    android:textSize="50sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="mapa"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_events"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_events"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/ic_panel_calendar"
                    android:textColor="@android:color/white"
                    android:textSize="50sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="wydarzenia"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="51dp"
            android:layout_marginStart="51dp"
            android:layout_marginTop="68dp"
            android:text="Wrocław"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:text="miasto spotkań"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
    </RelativeLayout>
</layout>